<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagenfondo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo2" />

    <TextView
        android:id="@+id/tituloSeccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#CC001926"
        android:fontFamily="@font/meat"
        android:padding="10dp"
        android:text="@string/selecciona_clase"
        android:textAlignment="center"
        android:textColor="@color/primario_light"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/primario"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloSeccion">

        <Spinner
            android:id="@+id/spinnerClases"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/primario_light"
            android:popupBackground="@color/secundario"
            android:divider="@drawable/e_m_3"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenIcono"
        android:layout_width="251dp"
        android:layout_height="236dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/human"
        app:tint="@color/primario" />
    <TextView
        android:id="@+id/tituloSeccion2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#CC001926"
        android:fontFamily="@font/meat"
        android:padding="10dp"
        android:text="@string/selecciona_genero"
        android:textAlignment="center"
        android:textColor="@color/primario_light"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnRasgosContinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableEnd="@drawable/maleicon"
            android:drawableTint="@color/primario_light"
            android:fontFamily="@font/meat"
            android:textColor="@color/primario_light"
            android:textSize="50sp" />

        <RadioButton
            android:id="@+id/radioButtonFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="@color/primario_light"
            android:drawableEnd="@drawable/femaleicon"
            android:drawableTint="@color/primario_light"
            android:fontFamily="@font/meat"
            android:textColor="@color/primario_light"
            android:textSize="50sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnRasgosContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:enabled="true"
        android:text="@string/continuar"
        app:icon="@android:drawable/ic_media_play"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>